--- a/src/views/Home/CharInfo/CharInfo.scss
+++ b/src/views/Home/CharInfo/CharInfo.scss
@@ -5,6 +5,7 @@
     background-color: #fff;
     padding: 25px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+    flex-basis: 40%;
   }
   &__block {
     display: flex;
