--- a/src/views/Home/CharList/CharList.scss
+++ b/src/views/Home/CharList/CharList.scss
@@ -25,6 +25,7 @@
     background-color: vars.$dark;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
     transition: 0.3s transform;
+    cursor: pointer;
   }
   &__img {
     width: 200px;
