--- a/src/views/Home/CharInfo/CharInfo.scss
+++ b/src/views/Home/CharInfo/CharInfo.scss
@@ -6,6 +6,8 @@
     padding: 25px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     flex-basis: 40%;
+    position: sticky;
+    top: 1px;
   }
   &__block {
     display: flex;
