added redirect to comics page from character info and redirect to previous page from NotFoundPage

--- a/src/views/Home/CharInfo/CharInfo.scss
+++ b/src/views/Home/CharInfo/CharInfo.scss
@@ -48,6 +48,9 @@
   &__comics-item:not(:last-child) {
     margin-bottom: 10px;
   }
+  &__link:hover {
+    text-decoration: underline;
+  }
   &__select {
     font-weight: 700;
     font-size: 18px;
