--- a/src/views/SingleComic/SingleComicInfo/SingleComicInfo.scss
+++ b/src/views/SingleComic/SingleComicInfo/SingleComicInfo.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/vars';
 
 .single-comic {
-  padding-top: 50px;
+  padding: 50px 0 50px;
   &__inner {
     display: flex;
     column-gap: 50px;
