added the ability to search for a hero

--- a/src/views/Home/RandomChar/RandomChar.scss
+++ b/src/views/Home/RandomChar/RandomChar.scss
@@ -4,7 +4,7 @@
   &__inner {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
+    @extend %block;
   }
   &__block {
     display: flex;
