--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -7,3 +7,17 @@ $grey: #5c5c5c;
   font-size: 22px;
   text-transform: uppercase;
 }
+
+%block {
+  background-color: #fff;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
