--- a/src/views/Home/CharInfo/CharInfo.scss
+++ b/src/views/Home/CharInfo/CharInfo.scss
@@ -2,12 +2,8 @@
 
 .char-content {
   &__info {
-    background-color: #fff;
+    @extend %block;
     padding: 25px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-    flex-basis: 40%;
-    position: sticky;
-    top: 1px;
   }
   &__block {
     display: flex;
