--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,3 +29,12 @@ body {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.single-page {
+  padding: 50px 0 50px;
+  &__inner {
+    display: flex;
+    column-gap: 50px;
+    align-items: flex-start;
+  }
+}
