--- a/src/views/Home/HomeSearch/HomeSearchResult/HomeSearchResult.scss
+++ b/src/views/Home/HomeSearch/HomeSearchResult/HomeSearchResult.scss
@@ -1,20 +1,20 @@
 @use '../../../../styles/vars';
 
-.char-content {
-  &__search-wrapper {
+.char-search {
+  &__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  &__search-success,
-  &__search-error {
+  &__success,
+  &__error {
     font-size: 18px;
     font-weight: 700;
   }
-  &__search-success {
+  &__success {
     color: #03710e;
   }
-  &__search-error {
+  &__error {
     color: vars.$red;
   }
 }
