--- a/src/views/Home/RandomChar/RandomChar.scss
+++ b/src/views/Home/RandomChar/RandomChar.scss
@@ -5,24 +5,41 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     @extend %block;
+    @include vars.media('max', 'md') {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
   &__block {
     display: flex;
     column-gap: 30px;
     padding: 35px 35px 35px 40px;
+    @include vars.media('max', 'sm') {
+      flex-direction: column;
+      align-items: center;
+      padding: 25px;
+    }
   }
   &__img {
     width: 180px;
     height: 180px;
   }
   &__info {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     row-gap: 10px;
     padding-top: 3px;
-    grid-template-rows: minmax(29px, auto) 90px 38px;
+    @include vars.media('max', 'sm') {
+      align-items: center;
+    }
   }
   &__name {
     @extend %title;
+    @include vars.media('max', 'sm') {
+      text-align: center;
+    }
+  }
+  &__description {
+    flex: 1 0 auto;
   }
   &__btns {
     display: flex;
@@ -47,10 +64,19 @@
     &:nth-child(2) {
       margin-bottom: 12px;
     }
+    @include vars.media('max', 'md') {
+      font-size: 20px;
+      &:nth-child(1) {
+        margin-bottom: 15px;
+      }
+    }
   }
   &__decor {
     position: absolute;
     bottom: 14px;
     right: -34px;
+    @include vars.media('max', 'lg') {
+      display: none;
+    }
   }
 }
