--- a/src/views/Home/CharList/CharList.scss
+++ b/src/views/Home/CharList/CharList.scss
@@ -6,6 +6,21 @@
     grid-template-columns: repeat(3, 200px);
     column-gap: 25px;
     row-gap: 30px;
+    @include vars.media('max', 'xl') {
+      grid-template-columns: repeat(2, 200px);
+    }
+    @include vars.media('max', 'lg') {
+      grid-template-columns: repeat(4, 200px);
+    }
+    @include vars.media('max', 'md') {
+      grid-template-columns: repeat(3, 200px);
+    }
+    @include vars.media('max', 'sm') {
+      grid-template-columns: repeat(2, 200px);
+    }
+    @include vars.media('max', 'xs') {
+      grid-template-columns: repeat(1, 200px);
+    }
   }
   &__list-item {
     width: 200px;
