--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@use './vars';
 @import './reset';
 
 html,
@@ -36,5 +37,13 @@ body {
     display: flex;
     column-gap: 50px;
     align-items: flex-start;
+    @include vars.media('max', 'md') {
+      column-gap: 25px;
+    }
+    @include vars.media('max', 'xs') {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 25px;
+    }
   }
 }
